2 files modified, 5 added, 2 deleted

--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.5",
-    "@angular/compiler": "^7.2.5",
-    "@angular/core": "^7.2.5",
-    "@angular/forms": "^7.2.5",
-    "@angular/platform-browser": "^7.2.5",
-    "@angular/platform-browser-dynamic": "^7.2.5",
-    "@angular/router": "^7.2.5",
-    "core-js": "^2.6.5",
-    "ngx-onsenui": "^7.0.0",
-    "onsenui": "~2.10.0",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "@angular/common": "7.2.9",
+    "@angular/compiler": "7.2.9",
+    "@angular/core": "7.2.9",
+    "@angular/forms": "7.2.9",
+    "@angular/platform-browser": "7.2.9",
+    "@angular/platform-browser-dynamic": "7.2.9",
+    "@angular/router": "7.2.9",
+    "@angular/service-worker": "^7.2.13",
+    "core-js": "2.6.5",
+    "ngx-onsenui": "7.0.0",
+    "onsenui": "2.10.6",
+    "rxjs": "6.4.0",
+    "zone.js": "0.8.29"
   },
   "scripts": {
     "ng": "ng",
