--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "2.6.5",
     "ngx-onsenui": "7.0.0",
     "onsenui": "2.10.6",
+    "pdfmake": "^0.1.58",
     "rxjs": "6.4.0",
     "rxjs-compat": "^6.5.2",
     "zone.js": "0.8.29"
