--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/router": "7.2.9",
     "@angular/service-worker": "7.2.15",
     "core-js": "2.6.5",
+    "dropbox": "^4.0.30",
     "ngx-onsenui": "7.0.0",
     "onsenui": "2.10.6",
     "pdfmake": "0.1.57",
