--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+ 
   "newProjectRoot": "projects",
   "projects": {
     "demo": {
@@ -25,7 +26,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+             "serviceWorker": true
           },
           "configurations": {
             "production": {
